infra/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vm-system
  labels:
    app.kubernetes.io/name: victoria-metrics
    app.kubernetes.io/component: monitoring
