infra/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: vm-system
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: system
spec:
  hostnames:
    - 'grafana.localhost'
  parentRefs:
    - name: envoy-gateway
      namespace: gw-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
          weight: 100
